<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SignUpFragment">

    <fragment
        android:id="@+id/SignUpFragment"
        android:name="com.example.polymaps.screens.SignUpFragment"
        android:label="@string/sign_up_fragment_label"
        tools:layout="@layout/fragment_sign_up">

        <action
            android:id="@+id/action_SignUpFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SignUpFragment_to_LoginFragment"
            app:destination="@id/LoginFragment" />
    </fragment>

    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.example.polymaps.screens.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_SignUpFragment"
            app:destination="@id/SignUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.polymaps.screens.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.polymaps.screens.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>