<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:text="@string/details"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/dialogName"
        android:text=""
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/dialogMacAddress"
        android:text=""
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/dialogPosition"
        android:text=""
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/dialogType"
        android:text=""
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/dialogDistance"
        android:text=""
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <Button
                android:id="@+id/addToFavoritesButton"
                android:text="@string/add_to_favorites"
                android:layout_width="match_parent"
                android:layout_gravity="start"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/shareButton"
                android:text="@string/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <Button
                android:id="@+id/howToGo"
                android:text="@string/get_directions"
                android:layout_width="match_parent"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                />
        </LinearLayout>


    </LinearLayout>