<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Sign Up"
                    android:textSize="30sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="24dp"/>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ivProfilePicture"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:src="@drawable/ic_baseline_person_24"
                    android:scaleType="centerCrop"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    app:strokeColor="@android:color/darker_gray"
                    app:strokeWidth="2dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textSize="16sp"/>
                    <TextView
                        android:id="@+id/buttonLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login"
                        android:textSize="16sp"
                        android:textColor="@color/link"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </FrameLayout>

</layout>
