<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    tools:context=".screens.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/user_email_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_email_placeholder"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/user_email_container">>

            <TextView
                android:id="@+id/settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/settings_fragment_label"
                android:textSize="20sp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/button_theme_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/settings_container">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:layout_gravity="center_vertical"
                android:text="@string/dark_theme" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/button_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/language_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/button_theme_container">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:layout_gravity="center_vertical"
                android:text="@string/language" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="250dp"
                android:layout_height="60dp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/information_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/language_container">

            <TextView
                android:id="@+id/information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="Informations"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currentPower_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/information_container">

            <TextView
                android:id="@+id/currentPower"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/currentLevel_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:paddingStart="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/currentPower_container">

            <TextView
                android:id="@+id/currentLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>



        <LinearLayout
            android:id="@+id/downSpeed_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/currentLevel_container">

            <TextView
                android:id="@+id/downSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/upSpeed_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/downSpeed_container">

            <TextView
                android:id="@+id/upSpeed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/accelerometerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/upSpeed_container">

            <TextView
                android:id="@+id/accelerometer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/motionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:paddingStart="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/accelerometerContainer">

            <TextView
                android:id="@+id/motion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                />
        </LinearLayout>


        <Button
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/motionContainer"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>